# cpp_sim_intro

./: CMakeLists.txt
models/urdf/: quadf.urdf
quad_leg/: CMakeLists.txt  place_quadruped_in_visual.cpp  quad_leg_plant.h  run_quad_leg_openloop.cpp  run_quad_leg_passive.cpp
quadrotor/: CMakeLists.txt  run_quadrotor_dynamics.cc
